# knowledge-base-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  dev.sh  docker-compose.yaml  log.py  main.py  pyproject.toml  service.py  service_registry.py  tokens.yaml.example
api/: mcp_server.py
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  hooks.ts  types.ts
dashboard/src/components/: GraphFlowChart.tsx  JsonView.tsx  Layout.tsx  MarkdownRenderer.tsx  SearchResultCard.tsx  Skeleton.tsx  StatCard.tsx  Toast.tsx
dashboard/src/contexts/: AuthContext.tsx  BusinessContext.tsx
dashboard/src/i18n/: context.tsx  en.ts  types.ts  zh.ts
docs/: MCP-INTEGRATION.md  ONBOARDING.md  PROPOSAL_20260325_114111_dashboard.md
docs/proposals/: PROPOSAL_20260325_191059_permission_system.md  PROPOSAL_20260325_192545_token_business_binding.md
docs/templates/: kb-shell-commands.md  knowledge-base-coding.mdc  knowledge-base-docs.mdc  mcp-config.json
indexer/: code_graph_builder.py  doc_indexer.py  embedding_generator.py  incremental_indexer.py  tree_sitter_parser.py
query/: graph_query.py  hybrid_query.py  semantic_query.py
scripts/: export_onnx.py  index-services.sh  reindex_all.py
static/: app.js  index.html  style.css
store/: business_manager.py  falkordb_store.py  graph_queries.py  schema.py
tests/: test_code_graph_builder.py  test_config.py  test_doc_indexer.py  test_mcp_server.py  test_schema.py  test_tree_sitter_parser.py
(+15 files in other folders)
