[project]
name = "knowledge-base-service"
version = "0.1.0"
description = "Code knowledge base service with FalkorDB graph + vector indexing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "falkordb>=1.0.8,<2",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=0.13.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "transformers>=4.38.0",
    "huggingface-hub>=0.21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "sentence-transformers>=2.7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools]
packages = ["indexer", "store", "query", "api"]
py-modules = ["main", "config", "log", "service"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
